test/success/integration/_succ_expr_elem_1.hs
x :: Int
x = elem [1,2,3]
main = print "hello"