test/fail/integration/_fail_grammar_expr_index_2.hs
x :: Int
x = [1,2,3] !! jl
main = print "hello"